[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-nopii-middleware"
version = "0.1.0"
description = "LangChain agent middleware that routes model calls through the NoPII PII-tokenization proxy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Enigma Vault", email = "support@nopii.co" },
]
keywords = [
    "langchain",
    "middleware",
    "nopii",
    "pii",
    "privacy",
    "tokenization",
    "redaction",
    "compliance",
    "hipaa",
    "gdpr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "langchain>=1.0.0a3",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
]

[project.urls]
Homepage = "https://www.nopii.co"
Documentation = "https://docs.nopii.co"
Repository = "https://github.com/Enigma-Vault/NoPII/tree/main/integrations/langchain-nopii-middleware"
Issues = "https://github.com/Enigma-Vault/NoPII/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_nopii_middleware"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
